# Zangar

./: .buildinfo  .coveragerc  .pre-commit-config.yaml  404.html  README.md  api.html  circular_reference.html  conftest.py  exceptions.html  genindex.html  index.html  macros.py  messages.html  mkdocs.yml  objects.inv  openapi.html  py-modindex.html  pylintrc  pyproject.toml  pytest.ini  search.html  searchindex.js  tox.ini
.doctrees/: api.doctree  circular_reference.doctree  environment.pickle  exceptions.doctree  index.doctree  messages.doctree  openapi.doctree
.doctrees/type_schemas/: dataclasses.doctree  index.doctree  methods.doctree  primitives.doctree  structures.doctree
.github/workflows/: docs.yml  test.yml  tests.yml
_sources/: api.rst.txt  exceptions.md.txt  index.md.txt  openapi.md.txt
_sources/type_schemas/: structures.md.txt
circular_reference/: index.html
dataclass/: index.html
docs/: api.rst  circular_reference.md  conf.py  dataclass.md  exceptions.md  getting_started.rst  index.md  index.rst  messages.md  messages.rst  methods.md  openapi.md  structures.md  types.md  unions.rst
docs/_ext/: custom_tables.py
docs/type_schemas/: dataclasses.md  index.rst  (+4 more)
exceptions/: index.html
messages/: index.html
methods/: index.html
openapi/: index.html
requirements/: docs.txt
search/: search_index.json
tests/: check_typing.py  test_dataclass_annotations.py  test_deprecated.py  test_messages.py  test_version.py  test_zangar.py
type_schemas/: dataclasses.html  index.html  methods.html  primitives.html  structures.html
types/: index.html
(+29 files in other folders)
